# libjoedog

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac
include/: Makefile.am
include/joedog/: defs.h  getopt.h  joedog.h
src/: Makefile.am  notify.c  notify.h  util.c  util.h
